# Clinica

Clinica_Medica/: CMakeLists.txt  main.cpp
Clinica_Medica/Citas_Medicas/: citas_medicas.cpp  citas_medicas.h  citas_medicas_controller.cpp  citas_medicas_controller.h
Clinica_Medica/Conexion_DB/: conexion_DB.cpp  conexion_DB.h
Clinica_Medica/Estado/: Estado.cpp  Estado.h  estadoController.cpp  estadoController.h
Clinica_Medica/Medicos/: medicos.cpp  medicos.h  medicosController.cpp  medicosController.h
Clinica_Medica/Pacientes/: paciente.cpp  paciente.h  pacienteController.cpp  pacienteController.h
